# my-python-project-template

./: README.md  pyproject.toml
Dockerfiles/: Dockerfile  django.py  requirements.txt
Dockerfiles/Dockerfiles/: Dockerfile
apps/: cli_app.py  fastapi_api.py  gradio_app.py
benchmarks/: benchmark_somthing.py
docs/examaples/: sample.md
notebooks/: first.ipynb
src/danhtran2mind_sample/: accelerator_train.py  inference.py  main.py  train.py
src/danhtran2mind_sample/configs/: config-2.json  config_1.yaml
src/danhtran2mind_sample/models/: README.md  discriminator_arch.py  text_encoder.py  tokenizer.py  unet.py  vae.py
src/danhtran2mind_sample/trainer/: trainer.py
src/danhtran2mind_sample/utils/: helpers.py
